src/test/ui/unboxed-closures/unboxed-closures-infer-fnonce-call-twice.nll.stderr
error[E0382]: use of moved value: `tick`
  --> $DIR/unboxed-closures-infer-fnonce-call-twice.rs:20:5
   |
LL |     tick();
   |     ---- value moved here
LL |     tick(); //~ ERROR use of moved value: `tick`
   |     ^^^^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
